# hueplusplus

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  _a_p_i_cache_8cpp.html  _a_p_i_cache_8cpp__incl.map  _a_p_i_cache_8cpp__incl.md5  _a_p_i_cache_8h.html  _a_p_i_cache_8h__dep__incl.map  _a_p_i_cache_8h__dep__incl.md5  _a_p_i_cache_8h__incl.map  _a_p_i_cache_8h__incl.md5  _a_p_i_cache_8h_source.html  _action_8cpp.html  _action_8cpp__incl.map  _action_8cpp__incl.md5  _action_8h.html  _action_8h__dep__incl.map  _action_8h__dep__incl.md5  _action_8h__incl.map  _action_8h__incl.md5  _action_8h_source.html  _base_device_8cpp.html  _base_device_8cpp__incl.map  _base_device_8cpp__incl.md5  _base_device_8h.html  _base_device_8h__dep__incl.map  _base_device_8h__dep__incl.md5  _base_device_8h__incl.map  _base_device_8h__incl.md5  _base_device_8h_source.html  _base_http_handler_8cpp.html  _base_http_handler_8cpp__incl.map  _base_http_handler_8cpp__incl.md5  _base_http_handler_8h.html  _base_http_handler_8h__dep__incl.map  (+847 more)
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  newPrLabeler.yml
doc/markdown/: Build.md  Getting_Started.md  Mainpage.md  Sensors.md  Shared_State.md  Transactions.md
examples/: BridgeSetup.cpp  CMakeLists.txt  LightsOff.cpp  Snippets.cpp  UsernameConfig.cpp
hueplusplus/: BaseHttpHandler.cpp  CMakeLists.txt  ExtendedColorHueStrategy.cpp  ExtendedColorTemperatureStrategy.cpp  HttpHandler.cpp  Hue.cpp  Hue.h  HueColorLight.cpp  HueCommandAPI.cpp  HueDeviceTypes.cpp  HueDimmableLight.cpp  HueException.cpp  HueExtendedColorLight.cpp  HueLight.cpp  HueLight.h  HueTemperatureLight.cpp  LinHttpHandler.cpp  SimpleBrightnessStrategy.cpp  SimpleColorHueStrategy.cpp  SimpleColorTemperatureStrategy.cpp  UPnP.cpp  Utils.cpp  WinHttpHandler.cpp  jsoncpp.cpp  linHttpHandler.cpp  winHttpHandler.cpp
hueplusplus/include/: BaseHttpHandler.h  BrightnessStrategy.h  ColorHueStrategy.h  ColorTemperatureStrategy.h  ExtendedColorHueStrategy.h  ExtendedColorTemperatureStrategy.h  HttpHandler.h  Hue.h  HueColorLight.h  HueCommandAPI.h  HueConfig.h  HueDeviceTypes.h  HueDimmableLight.h  HueException.h  HueExceptionMacro.h  HueExtendedColorLight.h  HueLight.h  HueTemperatureLight.h  IHttpHandler.h  LinHttpHandler.h  SimpleBrightnessStrategy.h  SimpleColorHueStrategy.h  SimpleColorTemperatureStrategy.h  UPnP.h  Units.h  Utils.h  WinHttpHandler.h  linHttpHandler.h  winHttpHandler.h
hueplusplus/include/json/: json-forwards.h
hueplusplus/test/: CMakeLists.txt  CMakeLists.txt.in  CodeCoverage.cmake  test_BaseHttpHandler.cpp  test_ExtendedColorHueStrategy.cpp  test_ExtendedColorTemperatureStrategy.cpp  test_Hue.cpp  test_HueCommandAPI.cpp  test_HueLight.cpp  test_IHttpHandler.cpp  test_Main.cpp  test_SimpleBrightnessStrategy.cpp  test_SimpleColorHueStrategy.cpp  test_SimpleColorTemperatureStrategy.cpp  test_UPnP.cpp  testhelper.h
hueplusplus/test/mocks/: mock_BaseHttpHandler.h  mock_HttpHandler.h  mock_HueLight.h  mock_LinHttpHandler.h  mock_linHttpHandler.h
include/hueplusplus/: APICache.h  APIConfig.h  BaseDevice.h  BaseHttpHandler.h  Bridge.h  BridgeConfig.h  BrightnessStrategy.h  CLIPSensors.h  ColorHueStrategy.h  ColorTemperatureStrategy.h  ColorUnits.h  Condition.h  EntertainmentMode.h  ExtendedColorHueStrategy.h  ExtendedColorTemperatureStrategy.h  Group.h  Hue.h  HueCommandAPI.h  HueConfig.h  HueDeviceTypes.h  HueException.h  HueExceptionMacro.h  HueLight.h  HueSensor.h  HueThing.h  IHttpHandler.h  Light.h  LinHttpHandler.h  ModelPictures.h  ResourceList.h  Rule.h  Scene.h  Schedule.h  Sensor.h  SensorList.h  SimpleBrightnessStrategy.h  SimpleColorHueStrategy.h  SimpleColorTemperatureStrategy.h  StateTransaction.h  TimePattern.h  (+5 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+101 more)
src/: APICache.cpp  BaseDevice.cpp  BaseHttpHandler.cpp  Bridge.cpp  BridgeConfig.cpp  CLIPSensors.cpp  CMakeLists.txt  ColorUnits.cpp  EntertainmentMode.cpp  ExtendedColorHueStrategy.cpp  ExtendedColorTemperatureStrategy.cpp  Group.cpp  Hue.cpp  HueCommandAPI.cpp  HueDeviceTypes.cpp  HueException.cpp  HueLight.cpp  HueSensor.cpp  HueThing.cpp  Light.cpp  LinHttpHandler.cpp  Rule.cpp  Scene.cpp  Schedule.cpp  Sensor.cpp  SimpleBrightnessStrategy.cpp  SimpleColorHueStrategy.cpp  SimpleColorTemperatureStrategy.cpp  StateTransaction.cpp  TimePattern.cpp  UPnP.cpp  Units.cpp  Utils.cpp  WinHttpHandler.cpp  ZLLSensors.cpp
test/: CMakeLists.txt  CodeCoverage.cmake  TestTransaction.h  test_APICache.cpp  test_BaseDevice.cpp  test_BaseHttpHandler.cpp  test_Bridge.cpp  test_BridgeConfig.cpp  test_ColorUnits.cpp  test_ExtendedColorHueStrategy.cpp  test_ExtendedColorTemperatureStrategy.cpp  test_Group.cpp  test_Hue.cpp  test_HueCommandAPI.cpp  test_HueLight.cpp  test_HueLightFactory.cpp  test_Light.cpp  test_LightFactory.cpp  test_Main.cpp  test_ResourceList.cpp  test_Rule.cpp  test_Scene.cpp  test_Schedule.cpp  test_Sensor.cpp  test_SensorImpls.cpp  test_SimpleBrightnessStrategy.cpp  test_SimpleColorHueStrategy.cpp  test_SimpleColorTemperatureStrategy.cpp  test_StateTransaction.cpp  test_TimePattern.cpp  test_UPnP.cpp
test/mocks/: mock_BaseHttpHandler.h  mock_HttpHandler.h  mock_HueLight.h  mock_Light.h
